--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALuLATOR </title>
     <!-- css link -->
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="css\style.css">
      <!-- google font  -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +51,7 @@
 </div>
 
     <!-- custom js link -->
-    <script src="script.js"></script>
+    <script src="js\script.js"></script>
 
     <p>this is test</p>
 </body>
